[package]
name = "integration-tests"
version = "1.0.0"
rust-version = { workspace = true }
edition = { workspace = true }
description = "Amplifier Integration Tests"

exclude = [
    "contract.wasm",
    "hash.txt"
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/optimizer:0.16.0
"""

[dependencies]
anyhow = { workspace = true }
axelar-core-std = { workspace = true }
axelar-wasm-std = { workspace = true }
coordinator = { workspace = true }
cosmwasm-std = { workspace = true }
cw-multi-test = { workspace = true }
error-stack = { workspace = true }
gateway = { workspace = true }
gateway-api = { workspace = true }
k256 = { workspace = true }
multisig = { workspace = true }
multisig-prover = { workspace = true }
rand = { workspace = true }
report = { workspace = true }
rewards = { workspace = true }
router = { workspace = true }
router-api = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
service-registry = { workspace = true }
service-registry-api = { workspace = true }
sha3 = { workspace = true }
tofn = { workspace = true }
voting-verifier = { workspace = true }

[lints]
workspace = true
