[package]
name = "integration-tests"
version = "1.0.0"
rust-version = { workspace = true }
license = "MIT OR Apache-2.0"
edition = { workspace = true }
description = "Amplifier Integration Tests"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
anyhow = { workspace = true }
axelar-core-std = { workspace = true }
axelar-wasm-std = { workspace = true }
chain-codec-api = { workspace = true }
chain-codec-evm = { workspace = true }
coordinator = { workspace = true }
cosmwasm-std = { workspace = true }
cw-multi-test = { workspace = true, features = ["cosmwasm_1_2"] }
error-stack = { workspace = true }
ethers-core = { workspace = true }
events = { workspace = true, features = ["derive"] }
gateway = { workspace = true }
gateway-api = { workspace = true }
goldie = { workspace = true }
interchain-token-service = { workspace = true }
k256 = { workspace = true }
multisig = { workspace = true }
multisig-prover = { workspace = true }
multisig-prover-api = { workspace = true }
rand = { workspace = true }
report = { workspace = true }
rewards = { workspace = true }
router = { workspace = true }
router-api = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
service-registry = { workspace = true }
service-registry-api = { workspace = true }
sha3 = { workspace = true }
signature-verifier-api = { workspace = true }
tofn = { workspace = true }
voting-verifier = { workspace = true }

[lints]
workspace = true
