[package]
name = "abi-translation-contract"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = "1.5"
cosmwasm-std = { workspace = true }
cosmwasm-storage = "1.5"
cw-storage-plus = "1.1.0"
cw2 = { workspace = true }
error-stack = "0.4"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

# Axelar dependencies
axelar-wasm-std = {workspace = true}
interchain-token-service = { workspace = true}
interchain-token-api = {workspace = true }
router-api = { workspace = true }

# ABI encoding dependencies
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
hex = "0.4"

[dev-dependencies]
cosmwasm-schema = "1.5"
goldie = { workspace = true }
assert_ok = { workspace = true }