[package]
name = "aleo-signature-verifier"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true

exclude = ["contract.wasm", "hash.txt"]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "aleo-signature-verifier"
path = "src/bin/schema.rs"

[features]
# use library feature to disable all instantiate/execute/query exports
library = []
# use this feature to enable test utils
test = []

[dependencies]
aleo-network-config = { workspace = true }
axelar-wasm-std = { workspace = true, features = ["derive"] }
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
error-stack = { workspace = true }
signature-verifier-api = { workspace = true }
snarkvm-cosmwasm = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
aleo-compatible-keccak = { workspace = true }
hex = "0.4.3"
rand = { workspace = true }
snarkos-account = { workspace = true }

[lints]
workspace = true
