[package]
name = "batching"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axelar-wasm-std = { workspace = true }
axelar-wasm-std-derive = { workspace = true }
cosmwasm-schema = "1.1.3"
cosmwasm-std = "1.1.3"
cw2 = "0.15.1"
error-stack =  { workspace = true }
report = { workspace = true }
thiserror = { workspace = true }
