[package]
name = "batching"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axelar-wasm-std = { workspace = true }
axelar-wasm-std-derive = { workspace = true }
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
error-stack = { workspace = true }
report = { workspace = true }
thiserror = { workspace = true }
