[package]
name = "batching"
version = "0.1.0"
rust-version = { workspace = true }
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "batching-schema"
path = "src/bin/schema.rs"

[dependencies]
axelar-wasm-std = { workspace = true }
axelar-wasm-std-derive = { workspace = true }
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
error-stack = { workspace = true }
report = { workspace = true }
thiserror = { workspace = true }
