[package]
name = "chain-codec"
version = "0.1.0"
rust-version = { workspace = true }
license = "MIT OR Apache-2.0"
edition = { workspace = true }
description = "Chain codec contract for EVM / Sui chains, using ABI encoding and EIP55 addresses or BCS encoding and Sui addresses depending on the feature flags"

[package.metadata.optimizer]
standard-build = false
builds = [{ name = "sui", features = ["sui"] }, { name = "evm", features = [] }]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "chain-codec-schema"
path = "src/bin/schema.rs"

[features]
# use library feature to disable all instantiate/execute/query exports
library = []
# enable this to build the Sui contract with BCS encoding and Sui addresses
# if this is not enabled, the EVM contract is built, i.e. ABI encoding and EIP55 addresses
sui = ["bcs", "sui-gateway"]

[dependencies]
axelar-wasm-std = { workspace = true, features = ["derive"] }
bcs = { version = "0.1.5", optional = true }
chain-codec-api = { workspace = true }
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
error-stack = { workspace = true }
ethers-contract = { workspace = true }
ethers-core = { workspace = true }
evm-gateway = { workspace = true }
itertools = { workspace = true }
k256 = { workspace = true }
multisig = { workspace = true, features = ["library"] }
sha3 = { workspace = true }
sui-gateway = { workspace = true, optional = true }
thiserror = { workspace = true }

[dev-dependencies]
anyhow = "1.0"
assert_ok = { workspace = true }
cw-multi-test = { workspace = true }
elliptic-curve = "0.13.5"
generic-array = "0.14.7"
goldie = { workspace = true }
hex = { workspace = true }
prost = "0.12.4"
router-api = { workspace = true }
service-registry-api = { workspace = true }

[lints]
workspace = true
