[package]
name = "command-batcher"
version = "0.1.0"
edition = "2021"
description = "Command batcher contract"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.6
"""

[dependencies]
cosmwasm-schema = "1.1.3"
cosmwasm-std = "1.1.3"
cosmwasm-storage = "1.1.3"
cw-storage-plus = "1.0.1"
cw2 = "0.15.1"
schemars = "0.8.10"
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }
serde_json = "1.0.89"
either = "1.8.1"
hex = { version = "0.4.3", default-features = false, features = [] }
connection-router = { workspace = true, features = ["library"] }
ethabi = { version = "18.0.0", default-features = false, features = [] }
sha3 = { version = "0.10", default-features = false, features = [] }
multisig = { workspace = true, features = ["library"] }
axelar-wasm-std = { workspace = true }
k256 = { version = "0.13.1", features = ["ecdsa"] }

[dev-dependencies]
cw-multi-test = "0.15.1"
