[package]
name = "coordinator"
version = "3.0.0"
rust-version = { workspace = true }
license = "MIT OR Apache-2.0"
edition = { workspace = true }
description = "Amplifier info aggregation for external use, alongside contract management, instantiation and migration"

exclude = ["contract.wasm", "hash.txt"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "coordinator-schema"
path = "src/bin/schema.rs"

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
axelar-wasm-std = { workspace = true, features = ["derive"] }
client = { workspace = true }
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true, features = ["cosmwasm_1_2"] }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
error-stack = { workspace = true }
gateway-api = { workspace = true }
itertools = { workspace = true }
msgs-derive = { workspace = true }
multisig = { workspace = true, features = ["library"] }
solana-multisig-prover-api = { workspace = true }
report = { workspace = true }
router-api = { workspace = true }
semver = { workspace = true }
serde_json = { workspace = true }
service-registry-api = { workspace = true }
thiserror = { workspace = true }
voting-verifier-api = { workspace = true }

[dev-dependencies]
cw-multi-test = { workspace = true, features = ["cosmwasm_1_2"] }
goldie = { workspace = true }
integration-tests = { workspace = true }
tofn = { workspace = true }

[lints]
workspace = true
