[package]
name = "event-verifier"
version = "0.1.0"
rust-version = { workspace = true }
license = "MIT OR Apache-2.0"
edition = { workspace = true }
description = "Event verifier contract"

exclude = ["contract.wasm", "hash.txt"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
axelar-wasm-std = { workspace = true, features = ["derive"] }
client = { workspace = true }
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
error-stack = { workspace = true }
event-verifier-api = { workspace = true }
itertools = { workspace = true }
msgs-derive = { workspace = true }
multisig = { workspace = true, features = ["library"] }
report = { workspace = true }
rewards = { workspace = true, features = ["library"] }
router-api = { workspace = true }
semver = { workspace = true }
serde_json = { workspace = true }
service-registry = { workspace = true, features = ["library"] }
service-registry-api = { workspace = true }
sha3 = { workspace = true }
thiserror = { workspace = true }
voting-verifier-api = { workspace = true }

[dev-dependencies]
alloy-primitives = { version = "0.7.7", features = ["getrandom"] }
assert_ok = { workspace = true }
bech32 = { workspace = true }
cw-multi-test = { workspace = true }
goldie = { workspace = true }
integration-tests = { workspace = true }
multisig = { workspace = true, features = ["test", "library"] }
rand = { workspace = true }
sha3 = { workspace = true }
starknet-checked-felt = { workspace = true }

[lints]
workspace = true
