[package]
name = "gateway"
version = "1.0.0"
rust-version = { workspace = true }
edition = { workspace = true }
description = "Gateway contract"

exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience, but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "gateway-schema"
path = "src/bin/schema.rs"

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []
# generate golden files for the tests
generate_golden_files = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/optimizer:0.16.0
"""

[dependencies]
axelar-wasm-std = { workspace = true, features = ["derive"] }
client = { workspace = true }
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
error-stack = { workspace = true }
gateway-api = { workspace = true }
itertools = { workspace = true }
report = { workspace = true }
router-api = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
voting-verifier = { workspace = true, features = ["library"] }

[dev-dependencies]
cw-multi-test = "0.15.1"
rand = "0.8.5"

[lints]
workspace = true
