[package]
name = "gateway"
version = "1.1.1"
rust-version = { workspace = true }
license = "MIT OR Apache-2.0"
edition = { workspace = true }
description = "Gateway contract"

exclude = ["contract.wasm", "hash.txt"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "gateway-schema"
path = "src/bin/schema.rs"

[features]
# use library feature to disable all instantiate/execute/query exports
library = []
# generate golden files for the tests
generate_golden_files = []

[dependencies]
axelar-wasm-std = { workspace = true, features = ["derive"] }
client = { workspace = true }
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
error-stack = { workspace = true }
gateway-api = { workspace = true }
itertools = { workspace = true }
limit = { workspace = true }
report = { workspace = true }
router-api = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
voting-verifier = { workspace = true, features = ["library"] }

[dev-dependencies]
assert_ok = { workspace = true }
cw-multi-test = { workspace = true }
goldie = { workspace = true }
rand = { workspace = true }

[lints]
workspace = true
