[package]
name = "interchain-token-service"
version = "1.2.1"
rust-version = { workspace = true }
license = "MIT OR Apache-2.0"
edition = { workspace = true }

exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience, but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/optimizer:0.16.1
"""

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "interchain-token-service-schema"
path = "src/bin/schema.rs"

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
axelar-core-std = { workspace = true }
axelar-wasm-std = { workspace = true }
axelarnet-gateway = { workspace = true, features = ["library"] }
client = { workspace = true }
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
error-stack = { workspace = true }
hex = { workspace = true }
interchain-token-service-std = { workspace = true }
its-msg-translator-api = { workspace = true }
itertools = "0.11.0"
msgs-derive = { workspace = true }
report = { workspace = true }
router-api = { workspace = true }
schemars = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha3 = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
assert_ok = { workspace = true }
goldie = { workspace = true }
its-abi-translator = { workspace = true }

[lints]
workspace = true
