[package]
name = "its-abi-translation"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]

# ABI encoding dependencies
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }

# Axelar dependencies
axelar-wasm-std = { workspace = true }
cosmwasm-schema = "1.5"
cosmwasm-std = { workspace = true }
cosmwasm-storage = "1.5"
cw-storage-plus = "1.1.0"
cw2 = { workspace = true }
error-stack = "0.4"
hex = "0.4"
interchain-token = { workspace = true }
its-payload-translation-api = { workspace = true }
router-api = { workspace = true }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { workspace = true }
thiserror = "1.0"

[dev-dependencies]
assert_ok = { workspace = true }
cosmwasm-schema = "1.5"
goldie = { workspace = true }
